modified:   httpd.conf

--- a/httpd.conf
+++ b/httpd.conf
@@ -1,7 +1,7 @@
 NameVirtualHost *:80
 
 <VirtualHost *:80>
-    ServerName docker-compose-lamp.dev
+    ServerName SpeakingDevOpsExercise
     DocumentRoot /code/webroot
     <Directory /code/webroot>
         Options Indexes FollowSymLinks MultiViews
